@@ -1,6 +1,6 @@
 {
   "name": "simp-named",
-  "version": "6.7.0",
+  "version": "6.8.0",
   "author": "SIMP Team",
   "summary": "manages either a chrooted named process or a caching nameserver",
   "license": "Apache-2.0",
@@ -16,7 +16,7 @@
   "dependencies": [
     {
       "name": "simp/iptables",
-      "version_requirement": ">= 6.4.0 < 7.0.0"
+      "version_requirement": ">= 6.5.3 < 7.0.0"
     },
     {
       "name": "simp/rsync",
@@ -24,7 +24,7 @@
     },
     {
       "name": "simp/simplib",
-      "version_requirement": ">= 3.6.0 < 5.0.0"
+      "version_requirement": ">= 4.9.0 < 5.0.0"
     },
     {
       "name": "puppetlabs/concat",
